# BeatcraftMeshEditor

./: .gitignore  Cargo.toml  README.md  color_notes.json  kaleidoscope.json  new_mesh.json  nice.json  session.json  test_mesh.json  test_session.json  the_first.json  triangle_env.json
beatcraft_editor/: Cargo.toml
beatcraft_editor/src/: data.rs  easing.rs  editor.rs  light_mesh.rs  main.rs  render.rs
beatcraft_editor/src/assets/shaders/: flat.frag  flat.vert  handle_points.vert  handles.frag  mesh.frag  mesh.vert  mirror.frag  mirror.vert  point.frag
beatcraft_editor/src/assets/shaders/core/: bloomfog_blur.vsh  bloomfog_upsample.fsh  gaussian_h.fsh
beatcraft_editor/src/beatmap/: mod.rs
beatcraft_editor/src/beatmap/data/: mod.rs
beatcraft_editor/src/beatmap/object/: mod.rs
beatcraft_editor/src/renaming/: light_mesh.rs  mod.rs
src/: data.rs  easing.rs  editor.rs  extensions.rs  light_mesh.rs  main.rs  math_interp.rs  render.rs  widgets.rs
src/assets/shaders/: handles.vert  mesh.frag  mesh.vert  point.frag  point.vert
src/assets/shaders/core/: beatcraft_blit.vsh  bloomfog_downsample.fsh  blue_noise.fsh  gaussian_v.fsh
src/renaming/: light_mesh.rs
