[package]
name = "beatcraft-mesher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mesh_editor"
path = "src/main.rs"
 
[dependencies]
eframe = { version = "0.33.3", features = ["glow"] }
egui = "0.33.3"
glow = "0.13"
glam = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
rfd = "0.14"
pathdiff = "0.2.3"


[profile.release]
opt-level = 3

