[package]
name = "beatcraft-editor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beatcraft_editor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33.3", features = ["glow"] }
egui = "0.33.3"
glam = { version = "0.32", features = ["bytemuck", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
rfd = "0.14"
indexmap = { version = "2.13.0", features = ["serde"] }
regex = "1.12.3"
anyhow = "1"
pathdiff = "0.2.3"
image = "0.25.10"
#tracks_rs = { path = "../../tracks-rs" }
num-traits = "0.2.19"

